--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,30 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+    background-color: rgba(253, 245, 218, 255);
+}
+
+.masterContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.containerList {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 525px;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid red;
+    flex-direction: column;
+}
+
+.containerList {
+width: ;
+height: ;
+}
